@@ -163,7 +163,7 @@ public class Metadata {
 		String col = root.getAttributeValue("col");
 		if ((col != null) && (!"".equals(col))) {
 			try {
-				knownCols.put(new Integer(col), root);
+				knownCols.put(Integer.valueOf(col), root);
 			} catch (NumberFormatException localNumberFormatException) {
 			}
 		}
@@ -429,7 +429,7 @@ public class Metadata {
 						newParent.add(child.fullCopy(true));
 					} else if (child.getAttributeValue("col") != null) {
 						try {
-							Integer colAttribute = new Integer(child.getAttributeValue("col"));
+							Integer colAttribute = Integer.valueOf(child.getAttributeValue("col"));
 							if (colsToKeep.contains(colAttribute)) {
 								System.out.println(
 										"Bringing over " + colAttribute + " - " + child.getAttributeValue("name"));
@@ -1100,7 +1100,7 @@ public class Metadata {
 				// name:"+child.getAttributeValue("name"));
 				// JOptionPane.showMessageDialog(null,"thisCol name:"+child.toFullString());
 				if ((thisCol != null) && (!"".equals(thisCol))) {
-					thisGroup.cols.add(new Integer(thisCol));
+					thisGroup.cols.add(Integer.valueOf(thisCol));
 				}
 			}
 			if (thisGroup.cols.size() > 0) {
@@ -1118,7 +1118,7 @@ public class Metadata {
 
 	public void associate(SimpleXMLElement node, Integer col) {
 		if ((col == null) && (node.getAttributeValue("col") != null)) {
-			Integer oldCol = new Integer(node.getAttributeValue("col"));
+			Integer oldCol = Integer.valueOf(node.getAttributeValue("col"));
 			knownCols.remove(oldCol);
 			node.setAttribute("col", null);
 			return;
